...
                              errorStyle: const TextStyle(
                                fontSize: 16,
                              ),
                            ),
                            validator: (input) {
                              if (input == '') {
                                return 'Veuillez renseignez un mot de\n passe.';
                              } else if (input != resetPwdController.text) {
                                return "Les mots de passe ne \ncorrespondent pas.";
                              }
                              return null;
                            },
                          ),
...
